joomla/03-deploy_joomla.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joomla-deployment
  labels:
    app: joomla
spec:
  replicas: 2
  selector:
    matchLabels:
      app: joomla
      tier: frontend
  strategy:
     type: Recreate
  template:
    metadata:
      labels:
        app: joomla
        tier: frontend
    spec:
      containers:
         - name: joomla
           image: joomla:latest
           ports:
           - containerPort: 80
             name: joomla
           volumeMounts:
           - name: joomla-data
             mountPath: /var/www/html
      volumes:
        - name: joomla-data
          persistentVolumeClaim:
            claimName: joomla-data-disk
