joomla/04-ingress_route.yaml
apiVersion: v1
kind: Service
metadata:
  name: joomla-service
  labels:
    app: joomla
spec:
  ports:
    - port: 80
  selector:
    app: joomla
    tier: frontend
  type: ClusterIP

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: joomlaingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`joomla.k8szf.local`)
    kind: Rule
    services:
    - name: joomla-service
      port: 80
